fix: .sign-up-form overlapped cover image so reduced padding on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -764,3 +764,8 @@ text-align: center;
         }
     }
 
+@media screen and (max-width:400px) {
+    .signup-form {
+        padding: 20px;
+    }
+}
